--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,17 @@ header {
 
 .header_right {
   display: flex;
-  gap: 20px;
+  gap: 30px;
 }
 
 .menu_wrap {
   display: flex;
-  gap: 15px;
+  gap: 30px;
   align-items: center;
+}
+
+.menu_wrap li:last-child {
+  font-weight: 600;
 }
 
 .header_btn {
@@ -30,6 +34,7 @@ header {
   text-align: center;
   line-height: 40px;
   background-color: #5b52ff;
+  font-weight: 700;
 }
 /* header end */
 
@@ -88,4 +93,56 @@ header {
   font-size: 32px;
   letter-spacing: -1px;
   line-height: 45px;
+}
+/* section_1 end */
+
+.section_4 {
+}
+
+.company_wrap {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+}
+
+.turn {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.turn_con {
+  width: 240px;
+}
+
+.top_turn {
+  margin-bottom: 25px;
+  animation: right_turn 20s linear infinite;
+}
+.bottom_turn {
+  animation: right_turn 20s linear infinite;
+}
+
+.top_turn img,
+.bottom_turn img {
+  display: block;
+  width: 240px;
+  height: auto;
+}
+
+@keyframes left_turn {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(1980px);
+  }
+}
+@keyframes right_turn {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1980px);
+  }
 }
