--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ header {
   align-items: center;
 }
 
-.floating_btn i {
-  font-size: 20px;
+.floating_btn img {
+  width: 25px;
 }
 
 /* .floating_btn end*/
@@ -96,7 +96,256 @@ header {
 }
 /* section_1 end */
 
-.section_4 {
+.section_2 {
+  padding: 0 120px;
+}
+
+.con_2 {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(241, 241, 241, 0.2);
+  margin-bottom: 100px;
+}
+
+.con_2:last-child {
+  margin-bottom: 0;
+  border-bottom: none;
+}
+
+.con_img_2 {
+  width: 50%;
+}
+.con_img_2 img {
+  border-radius: 30px;
+}
+
+.con_title_wrap_2 {
+  display: flex;
+  gap: 28px;
+}
+
+.num_2 {
+  font-size: 30px;
+  margin-top: 10px;
+  color: #5b52ff;
+  font-weight: 500;
+}
+
+.title_2 {
+  margin-bottom: 130px;
+}
+
+.title_2 h2 {
+  font-size: 100px;
+  font-weight: 700;
+  margin-bottom: 35px;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: -2px;
+}
+
+.title_2 h3 {
+  font-size: 24px;
+  opacity: 0.8;
+  margin-bottom: 45px;
+  letter-spacing: -1px;
+  font-weight: 500;
+}
+
+.title_2 p {
+  letter-spacing: -1px;
+  line-height: 26px;
+  opacity: 0.5;
+  font-weight: 500;
+  margin-bottom: 100px;
+}
+
+.btn_2 {
+  width: 180px;
+  height: 56px;
+  background-color: #5b52ff;
+  border-radius: 6px;
+  text-align: center;
+  line-height: 56px;
+}
+
+.btn_2 a {
+  width: 100%;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+/* section_2 end */
+
+.section_3 {
+  width: 100%;
+  margin-bottom: 180px;
+}
+
+.con_wrap_3 {
+  width: 68.75%;
+  height: 675px;
+  /* background-color: beige; */
+  margin: 0 auto;
+  position: relative;
+}
+
+.title_3 {
+  font-size: 72px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.con_wrap_3:hover .donut img {
+  transform: rotate(0);
+}
+
+.con_wrap_3:hover .donut_stick_1 {
+  width: 532px;
+}
+.con_wrap_3:hover .donut_stick_2 {
+  width: 450px;
+}
+.con_wrap_3:hover .donut_stick_3 {
+  width: 533px;
+}
+.con_wrap_3:hover .donut_stick_4 {
+  width: 424px;
+}
+.con_wrap_3:hover .stick_4 span {
+  opacity: 1;
+}
+
+.donut {
+  margin: 0 auto;
+  position: relative;
+  width: 471px;
+}
+
+.donut img {
+  width: 100%;
+  transform: rotate(-30deg);
+  transition: 1s;
+}
+
+.donut p {
+  font-size: 32px;
+  line-height: 42px;
+  text-align: center;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.donut span {
+  color: #5b52ff;
+}
+
+.donut_stick_1 {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 31px;
+  left: 354px;
+  transition: 1s;
+  width: 0px;
+}
+
+.stick_1 {
+  width: 100%;
+  height: 4px;
+  background-color: #7c6cff;
+}
+.stick_circle_1 {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #7c6cff;
+  position: relative;
+  left: -5px;
+}
+.donut_stick_2 {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 357px;
+  left: 434px;
+  transition: 1s;
+  width: 0px;
+}
+
+.stick_2 {
+  width: 100%;
+  height: 4px;
+  background-color: #5b52ff;
+}
+.stick_circle_2 {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #5b52ff;
+  position: relative;
+  left: -5px;
+}
+.donut_stick_3 {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 432px;
+  right: 354px;
+  transition: 1s;
+  width: 0px;
+}
+
+.stick_3 {
+  width: 100%;
+  height: 4px;
+  background-color: #4b43e8;
+}
+.stick_circle_3 {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #4b43e8;
+  position: relative;
+  left: 5px;
+}
+
+.donut_stick_4 {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 116px;
+  right: 438px;
+  width: 0px;
+  transition: 1s;
+  /* background-color: antiquewhite; */
+}
+
+.stick_4 {
+  width: 100%;
+  height: 4px;
+  background-color: #362fc3;
+}
+.stick_circle_4 {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #362fc3;
+  position: relative;
+  left: 5px;
+}
+
+.stick_4 span {
+  display: block;
+  margin-top: 20px;
+  opacity: 0;
+  transition: 3s;
 }
 
 .company_wrap {
