--- a/css/style.css
+++ b/css/style.css
@@ -182,20 +182,19 @@ header {
   margin-bottom: 180px;
 }
 
-.con_wrap_3 {
-  width: 68.75%;
-  height: 675px;
-  /* background-color: beige; */
-  margin: 0 auto;
-  position: relative;
-}
-
 .title_3 {
   font-size: 72px;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
   margin-bottom: 50px;
   text-align: center;
+}
+
+.con_wrap_3 {
+  width: 68.75%;
+  height: 675px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .con_wrap_3:hover .donut img {
@@ -205,16 +204,27 @@ header {
 .con_wrap_3:hover .donut_stick_1 {
   width: 532px;
 }
+
 .con_wrap_3:hover .donut_stick_2 {
   width: 450px;
 }
+
 .con_wrap_3:hover .donut_stick_3 {
   width: 533px;
 }
+
 .con_wrap_3:hover .donut_stick_4 {
   width: 424px;
 }
-.con_wrap_3:hover .stick_4 span {
+
+.con_wrap_3:hover .stick_circle_1 {
+  opacity: 1;
+}
+.con_wrap_3:hover .stick_circle_2 {
+  opacity: 1;
+}
+
+.con_wrap_3:hover .txt_wrap_3 {
   opacity: 1;
 }
 
@@ -230,7 +240,7 @@ header {
   transition: 1s;
 }
 
-.donut p {
+.donut > p {
   font-size: 32px;
   line-height: 42px;
   text-align: center;
@@ -251,7 +261,7 @@ header {
   align-items: center;
   position: absolute;
   top: 31px;
-  left: 354px;
+  left: 355px;
   transition: 1s;
   width: 0px;
 }
@@ -260,7 +270,9 @@ header {
   width: 100%;
   height: 4px;
   background-color: #7c6cff;
+  position: relative;
 }
+
 .stick_circle_1 {
   width: 8px;
   height: 8px;
@@ -268,13 +280,17 @@ header {
   background-color: #7c6cff;
   position: relative;
   left: -5px;
+  flex-shrink: 0;
+  opacity: 0;
+  transition: 1s;
 }
+
 .donut_stick_2 {
   display: flex;
   align-items: center;
   position: absolute;
   top: 357px;
-  left: 434px;
+  left: 432px;
   transition: 1s;
   width: 0px;
 }
@@ -283,7 +299,9 @@ header {
   width: 100%;
   height: 4px;
   background-color: #5b52ff;
+  position: relative;
 }
+
 .stick_circle_2 {
   width: 8px;
   height: 8px;
@@ -291,6 +309,9 @@ header {
   background-color: #5b52ff;
   position: relative;
   left: -5px;
+  flex-shrink: 0;
+  opacity: 0;
+  transition: 1s;
 }
 .donut_stick_3 {
   display: flex;
@@ -306,7 +327,9 @@ header {
   width: 100%;
   height: 4px;
   background-color: #4b43e8;
+  position: relative;
 }
+
 .stick_circle_3 {
   width: 8px;
   height: 8px;
@@ -314,6 +337,7 @@ header {
   background-color: #4b43e8;
   position: relative;
   left: 5px;
+  flex-shrink: 0;
 }
 
 .donut_stick_4 {
@@ -324,14 +348,15 @@ header {
   right: 438px;
   width: 0px;
   transition: 1s;
-  /* background-color: antiquewhite; */
 }
 
 .stick_4 {
   width: 100%;
   height: 4px;
   background-color: #362fc3;
+  position: relative;
 }
+
 .stick_circle_4 {
   width: 8px;
   height: 8px;
@@ -339,14 +364,186 @@ header {
   background-color: #362fc3;
   position: relative;
   left: 5px;
+  flex-shrink: 0;
 }
 
-.stick_4 span {
-  display: block;
-  margin-top: 20px;
+.txt_wrap_3 {
+  display: flex;
+  flex-direction: column;
+  white-space: nowrap;
   opacity: 0;
-  transition: 3s;
+  transition: opacity 0.5s ease 0.5s;
+  position: absolute;
+  top: 15px;
 }
+
+.txt_wrap_3 h2 {
+  font-size: 46px;
+  font-weight: 700;
+  letter-spacing: -1px;
+  margin-bottom: 10px;
+}
+
+.txt_wrap_3 p {
+  font-size: 16px;
+  letter-spacing: -1px;
+  opacity: 0.5;
+}
+
+.stick_1 .txt_wrap_3,
+.stick_2 .txt_wrap_3 {
+  text-align: left;
+  left: auto;
+  right: 0;
+}
+
+.stick_3 .txt_wrap_3,
+.stick_4 .txt_wrap_3 {
+  text-align: right;
+  left: 0;
+  right: auto;
+}
+
+@media screen and (max-width: 1320px) {
+  .title_3 {
+    font-size: 56px;
+    margin-bottom: 40px;
+  }
+
+  .con_wrap_3 {
+    width: 80%;
+    height: 550px;
+  }
+
+  .donut {
+    width: 380px;
+  }
+
+  .donut > p {
+    font-size: 26px;
+    line-height: 36px;
+  }
+
+  .donut_stick_1 {
+    top: 25px;
+    left: 286px;
+  }
+
+  .donut_stick_2 {
+    top: 288px;
+    left: 348px;
+  }
+
+  .donut_stick_3 {
+    top: 348px;
+    right: 286px;
+  }
+
+  .donut_stick_4 {
+    top: 94px;
+    right: 353px;
+  }
+
+  .con_wrap_3:hover .donut_stick_1 {
+    width: 400px;
+  }
+
+  .con_wrap_3:hover .donut_stick_2 {
+    width: 340px;
+  }
+
+  .con_wrap_3:hover .donut_stick_3 {
+    width: 400px;
+  }
+
+  .con_wrap_3:hover .donut_stick_4 {
+    width: 320px;
+  }
+
+  .txt_wrap_3 h2 {
+    font-size: 36px;
+    margin-bottom: 8px;
+  }
+
+  .txt_wrap_3 p {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .section_3 {
+    margin-bottom: 120px;
+  }
+
+  .title_3 {
+    font-size: 44px;
+    margin-bottom: 30px;
+  }
+
+  .con_wrap_3 {
+    width: 90%;
+    height: 450px;
+  }
+
+  .donut {
+    width: 300px;
+  }
+
+  .donut > p {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .donut_stick_1 {
+    top: 20px;
+    left: 226px;
+  }
+
+  .donut_stick_2 {
+    top: 227px;
+    left: 275px;
+  }
+
+  .donut_stick_3 {
+    top: 275px;
+    right: 226px;
+  }
+
+  .donut_stick_4 {
+    top: 74px;
+    right: 279px;
+  }
+
+  .con_wrap_3:hover .donut_stick_1 {
+    width: 280px;
+  }
+
+  .con_wrap_3:hover .donut_stick_2 {
+    width: 240px;
+  }
+
+  .con_wrap_3:hover .donut_stick_3 {
+    width: 280px;
+  }
+
+  .con_wrap_3:hover .donut_stick_4 {
+    width: 220px;
+  }
+  .txt_wrap_3 h2 {
+    font-size: 28px;
+    margin-bottom: 6px;
+  }
+
+  .txt_wrap_3 p {
+    font-size: 12px;
+  }
+
+  .txt_wrap_3 {
+    top: 12px;
+  }
+}
+
+/* section_3 end */
 
 .company_wrap {
   width: 100%;
@@ -362,14 +559,7 @@ header {
 
 .turn_con {
   width: 240px;
-}
-
-.top_turn {
-  margin-bottom: 25px;
-  animation: right_turn 20s linear infinite;
-}
-.bottom_turn {
-  animation: right_turn 20s linear infinite;
+  flex-shrink: 0;
 }
 
 .top_turn img,
@@ -378,16 +568,16 @@ header {
   width: 240px;
   height: auto;
 }
-
-@keyframes left_turn {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(1980px);
-  }
+.top_turn {
+  margin-bottom: 25px;
+  animation: scroll_move 20s linear infinite;
 }
-@keyframes right_turn {
+
+.bottom_turn {
+  animation: scroll_move 20s linear infinite reverse;
+}
+
+@keyframes scroll_move {
   0% {
     transform: translateX(0);
   }
@@ -398,15 +588,69 @@ header {
 /* section_4 end */
 
 .section_5 {
-  padding: 0 120px;
+  padding: 0 0 0 120px;
+}
+
+.swiper_5 .swiper-slide {
+  width: 460px;
+  height: auto;
+}
+
+.card_5 {
+  background-color: #1d1d1d;
+  border-radius: 20px;
+  padding: 75px 35px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card_top {
+  margin-bottom: 100px;
+}
+
+.ceo_wrap_5 h2 {
+  font-size: 32px;
+  font-weight: 700;
+}
+.ceo_wrap_5 p {
+  font-size: 18px;
+  opacity: 0.5;
+  letter-spacing: -1px;
+  margin-bottom: 5px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.card_line {
+  width: 100%;
+  height: 1px;
+  background-color: rgba(241, 241, 241, 0.2);
+  margin-bottom: 30px;
+}
+
+.txt_wrap_5 h3 {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 34px;
+  letter-spacing: -1px;
+  margin-bottom: 35px;
+}
+.txt_wrap_5 span {
+  font-family: "Montserrat", sans-serif;
+}
+.txt_wrap_5 p {
+  font-size: 18px;
+  opacity: 0.5;
+  line-height: 30px;
+  letter-spacing: -1px;
 }
 
 /* section_5 end */
 
 .section_6 {
   padding: 0 120px;
+  position: relative;
 }
-
 .con_wrap_6 {
   width: 100%;
   position: relative;
@@ -418,12 +662,88 @@ header {
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   border: solid 2px rgba(245, 245, 245, 0.15);
+  position: relative;
+}
+
+.sparkle_orbit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  pointer-events: none;
+}
+
+.sparkle_1 {
+  animation: sparkle-rotate 12s linear infinite;
+}
+
+.sparkle_2 {
+  animation: sparkle-rotate 12s linear infinite;
+}
+
+.sparkle {
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 16px;
+  height: 16px;
+  background: #5b52ff;
+  border-radius: 50%;
+  filter: blur(5px);
+}
+
+.sparkle_2 .sparkle {
+  top: auto;
+  bottom: -10px;
+  width: 16px;
+  height: 16px;
+  background: #5b52ff;
+  border-radius: 50%;
+  filter: blur(5px);
+}
+
+@keyframes sparkle-rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.sparkle::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background: inherit;
+  border-radius: 50%;
+  animation: sparkle-pulse 2s ease-in-out infinite;
+}
+
+@keyframes sparkle-pulse {
+  0%,
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: translate(-50%, -50%) scale(1.5);
+    opacity: 0.5;
+  }
 }
 
 .main_circle_wrap {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: absolute;
   top: 50%;
   left: 0;
@@ -435,20 +755,206 @@ header {
   aspect-ratio: 1 / 1;
   border-radius: 50%;
   border: solid 2px rgb(35, 35, 35);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 40px;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.main_circle:hover {
+  border-color: #5b52ff;
+  box-shadow: 0 0 6px 0 rgba(91, 82, 255, 0.8),
+    0 0 12px 2px rgba(91, 82, 255, 0.5), inset 0 0 6px 0 rgba(91, 82, 255, 0.3);
 }
 
 .circle_2 {
   margin-left: -60px;
 }
+
 .circle_3 {
   margin-left: -60px;
 }
-.main_circle {
+
+.con_title_6 {
+  font-size: 40px;
+  font-weight: 700;
+  color: #f5f5f5;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.con_6_img {
+  margin-bottom: 24px;
+}
+
+.first_img {
+  width: 27.16666%;
+}
+
+.second_img {
+  width: 35%;
+}
+
+.third_img {
+  width: 40%;
+}
+
+.con_6_img img {
+  width: 100%;
+  height: auto;
+}
+
+.main_circle p {
+  font-size: 14px;
+  font-weight: 400;
+  color: #f5f5f5;
+  opacity: 0.5;
+  text-align: center;
+  line-height: 1.7;
+}
+
+@media screen and (max-width: 1024px) {
+  .section_6 {
+    padding: 80px 40px;
+  }
+
+  .title_wrap h2 {
+    font-size: 40px;
+  }
+
+  .title_wrap p {
+    font-size: 16px;
+  }
+
+  .title_wrap p br {
+    display: none;
+  }
+
+  .bg_circle {
+    width: 90%;
+  }
+
+  .main_circle {
+    width: 38%;
+    padding: 30px;
+  }
+
+  .circle_2,
+  .circle_3 {
+    margin-left: -40px;
+  }
+
+  .con_title_6 {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+
+  .main_circle p {
+    font-size: 12px;
+  }
+
+  .main_circle p br {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section_6 {
+    padding: 60px 20px;
+  }
+
+  .title_wrap {
+    margin-bottom: 40px;
+  }
+
+  .title_wrap h2 {
+    font-size: 28px;
+  }
+
+  .title_wrap p {
+    font-size: 14px;
+  }
+
+  .title_wrap p br {
+    display: none;
+  }
+
+  .bg_circle {
+    width: 95%;
+  }
+
+  .main_circle {
+    width: 40%;
+    padding: 20px;
+  }
+
+  .circle_2,
+  .circle_3 {
+    margin-left: -30px;
+  }
+
+  .con_title_6 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .con_6_img {
+    margin-bottom: 15px;
+  }
+
+  .main_circle p {
+    display: none;
+  }
+}
+/* section_6 end */
+
+.section_7 {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
-.first_img {
-  width: 27.16666%;
+
+.txt_wrap_7 h2 {
+  font-size: 95px;
+  line-height: 90px;
+  font-weight: 700;
+  margin-bottom: 50px;
+  letter-spacing: -5px;
+}
+
+.txt_wrap_7 p {
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 50px;
+  opacity: 0.5;
+  letter-spacing: -1px;
+}
+
+.btn_7 {
+  text-align: center;
+  line-height: 62px;
+  width: 300px;
+  height: 62px;
+  border-radius: 30px;
+  border: 1px solid rgba(91, 82, 255, 0.3);
+  transition: 0.7s;
+}
+
+.btn_7 a {
+  width: 100%;
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: -1px;
+}
+
+.btn_7:hover {
+  background-color: #5b52ff;
 }
