1208 까지 작업한것

--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,7 @@ section {
 
 .title_wrap {
   font-family: "Montserrat", sans-serif;
+  margin-bottom: 50px;
 }
 .title_wrap h2 {
   font-size: 72px;
