--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,21 @@ header {
   padding: 0 120px;
   position: fixed;
   z-index: 999;
+}
+
+header.scrolled {
   background-color: #000;
+}
+
+.logo img {
+  width: auto;
+  height: auto;
 }
 
 .header_right {
   display: flex;
   gap: 30px;
+  align-items: center;
 }
 
 .menu_wrap {
@@ -37,6 +46,87 @@ header {
   background-color: #5b52ff;
   font-weight: 700;
 }
+
+.hamburger_btn {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.hamburger_btn span {
+  display: block;
+  width: 25px;
+  height: 2px;
+  background-color: #fff;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1440px) {
+  header {
+    padding: 0 80px;
+    height: 70px;
+  }
+
+  .menu_wrap {
+    gap: 25px;
+    font-size: 15px;
+  }
+
+  .header_btn {
+    width: 100px;
+    height: 36px;
+    line-height: 36px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  header {
+    padding: 0 40px;
+    height: 65px;
+  }
+
+  .menu_wrap {
+    gap: 20px;
+    font-size: 14px;
+  }
+
+  .header_btn {
+    width: 90px;
+    height: 34px;
+    line-height: 34px;
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    padding: 0 20px;
+    height: 60px;
+  }
+
+  .logo img {
+    width: 80px;
+    height: auto;
+  }
+
+  .menu_wrap {
+    display: none;
+  }
+
+  .header_btn {
+    display: none;
+  }
+
+  .hamburger_btn {
+    display: flex;
+  }
+}
+
 /* header end */
 
 .floating_btn {
@@ -78,7 +168,6 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* color: #fff; */
   text-align: center;
   font-family: "Montserrat", sans-serif;
 }
@@ -94,6 +183,53 @@ header {
   font-size: 32px;
   letter-spacing: -1px;
   line-height: 45px;
+}
+
+@media screen and (max-width: 1440px) {
+  .title_1 h1 {
+    font-size: 90px;
+    margin-bottom: 26px;
+  }
+
+  .title_1 p {
+    font-size: 24px;
+    line-height: 34px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .title_1 h1 {
+    font-size: 64px;
+    margin-bottom: 19px;
+    letter-spacing: -1.5px;
+  }
+
+  .title_1 p {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section_1 {
+    padding: 0 16px;
+  }
+
+  .title_1 {
+    width: 100%;
+    padding: 0 16px;
+  }
+
+  .title_1 h1 {
+    font-size: 48px;
+    margin-bottom: 14px;
+    letter-spacing: -1px;
+  }
+
+  .title_1 p {
+    font-size: 16px;
+    line-height: 22px;
+  }
 }
 /* section_1 end */
 
@@ -171,6 +307,179 @@ header {
   display: block;
   font-size: 20px;
   font-weight: 700;
+}
+
+@media screen and (max-width: 1440px) {
+  .section_2 {
+    padding: 0 80px;
+  }
+
+  .title_2 h2 {
+    font-size: 80px;
+    margin-bottom: 30px;
+  }
+
+  .title_2 h3 {
+    font-size: 22px;
+    margin-bottom: 35px;
+  }
+
+  .title_2 p {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 80px;
+  }
+
+  .con_2 {
+    padding-bottom: 80px;
+    margin-bottom: 80px;
+  }
+
+  .num_2 {
+    font-size: 26px;
+  }
+
+  .btn_2 {
+    width: 160px;
+    height: 50px;
+    line-height: 50px;
+  }
+
+  .btn_2 a {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .section_2 {
+    padding: 0 40px;
+  }
+
+  .title_wrap.title_2 h2 {
+    font-size: 56px;
+  }
+
+  .title_wrap.title_2 p {
+    font-size: 18px;
+  }
+
+  .title_wrap.title_2 p br {
+    display: none;
+  }
+
+  .con_2 {
+    flex-direction: column;
+    gap: 40px;
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+  }
+
+  .con_img_2 {
+    width: 100%;
+    order: -1;
+  }
+
+  .con_title_wrap_2 {
+    gap: 20px;
+  }
+
+  .title_2 h2 {
+    font-size: 56px;
+    margin-bottom: 25px;
+  }
+
+  .title_2 h3 {
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+
+  .title_2 p {
+    font-size: 15px;
+    line-height: 22px;
+    margin-bottom: 40px;
+  }
+
+  .title_2 p br {
+    display: none;
+  }
+
+  .num_2 {
+    font-size: 24px;
+  }
+
+  .btn_2 {
+    width: 150px;
+    height: 48px;
+    line-height: 48px;
+  }
+
+  .btn_2 a {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section_2 {
+    padding: 0 20px;
+  }
+
+  .title_wrap.title_2 {
+    margin-bottom: 40px;
+  }
+
+  .title_wrap.title_2 h2 {
+    font-size: 36px;
+  }
+
+  .title_wrap.title_2 p {
+    font-size: 14px;
+  }
+
+  .con_2 {
+    gap: 30px;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+  }
+
+  .con_title_wrap_2 {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .num_2 {
+    font-size: 20px;
+    margin-top: 0;
+  }
+
+  .title_2 h2 {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  .title_2 h3 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .title_2 p {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 30px;
+  }
+
+  .btn_2 {
+    width: 130px;
+    height: 44px;
+    line-height: 44px;
+  }
+
+  .btn_2 a {
+    font-size: 14px;
+  }
+
+  .con_img_2 img {
+    border-radius: 20px;
+  }
 }
 
 /* section_2 end */
@@ -405,7 +714,11 @@ header {
   right: auto;
 }
 
-@media screen and (max-width: 1320px) {
+.con_wrap_3_mobile {
+  display: none;
+}
+
+@media screen and (max-width: 1440px) {
   .title_3 {
     font-size: 56px;
     margin-bottom: 40px;
@@ -544,6 +857,186 @@ header {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .section_3 {
+    margin-bottom: 80px;
+    padding: 0 16px;
+    overflow: hidden;
+  }
+
+  .title_3 {
+    font-size: 32px;
+    margin-bottom: 30px;
+  }
+  .con_wrap_3 {
+    display: none;
+  }
+  .con_wrap_3_mobile {
+    display: block;
+  }
+
+  .con_wrap_3_mobile {
+    width: 100%;
+    position: relative;
+    min-height: 500px;
+  }
+
+  .donut_mobile {
+    width: 250px;
+    margin: 0 auto;
+    position: relative;
+  }
+
+  .donut_mobile img {
+    width: 100%;
+    transform: rotate(0deg);
+  }
+
+  .donut_mobile > p {
+    font-size: 18px;
+    line-height: 24px;
+    text-align: center;
+    font-weight: 700;
+    font-family: "Montserrat", sans-serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .donut_mobile span {
+    color: #5b52ff;
+  }
+
+  .mobile_item {
+    position: absolute;
+    display: flex;
+    align-items: center;
+  }
+
+  .mobile_stick {
+    height: 4px;
+    background-color: #7c6cff;
+  }
+
+  .mobile_circle {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #7c6cff;
+    flex-shrink: 0;
+  }
+
+  .mobile_txt {
+    display: flex;
+    flex-direction: column;
+    white-space: normal;
+  }
+
+  .mobile_txt h2 {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 6px;
+  }
+
+  .mobile_txt p {
+    font-size: 11px;
+    line-height: 1.4;
+    opacity: 0.5;
+  }
+
+  .mobile_item_1 {
+    top: 16px;
+    left: 50%;
+    margin-left: 125px;
+    flex-direction: row;
+  }
+
+  .mobile_stick_1 {
+    width: 150px;
+  }
+
+  .mobile_circle_1 {
+    background-color: #7c6cff;
+    margin-left: -5px;
+  }
+
+  .mobile_item_1 .mobile_txt {
+    margin-left: 12px;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .mobile_item_2 {
+    top: 189px;
+    left: 50%;
+    margin-left: 125px;
+    flex-direction: row;
+  }
+
+  .mobile_stick_2 {
+    width: 130px;
+    background-color: #5b52ff;
+  }
+
+  .mobile_circle_2 {
+    background-color: #5b52ff;
+    margin-left: -5px;
+  }
+
+  .mobile_item_2 .mobile_txt {
+    margin-left: 12px;
+    align-items: flex-start;
+    text-align: left;
+  }
+
+  .mobile_item_3 {
+    top: 229px;
+    right: 50%;
+    margin-right: 125px;
+    flex-direction: row-reverse;
+  }
+
+  .mobile_stick_3 {
+    width: 150px;
+    background-color: #4b43e8;
+  }
+
+  .mobile_circle_3 {
+    background-color: #4b43e8;
+    margin-right: -5px;
+  }
+
+  .mobile_item_3 .mobile_txt {
+    margin-right: 12px;
+    align-items: flex-end;
+    text-align: right;
+  }
+
+  .mobile_item_4 {
+    top: 61px;
+    right: 50%;
+    margin-right: 125px;
+    flex-direction: row-reverse;
+  }
+
+  .mobile_stick_4 {
+    width: 120px;
+    background-color: #362fc3;
+  }
+
+  .mobile_circle_4 {
+    background-color: #362fc3;
+    margin-right: -5px;
+  }
+
+  .mobile_item_4 .mobile_txt {
+    margin-right: 12px;
+    align-items: flex-end;
+    text-align: right;
+  }
+}
+
 /* section_3 end */
 
 .company_wrap {
@@ -584,6 +1077,89 @@ header {
   }
   100% {
     transform: translateX(-1980px);
+  }
+}
+@media screen and (max-width: 1440px) {
+  .turn {
+    gap: 37.5px;
+  }
+
+  .turn_con {
+    width: 180px;
+  }
+
+  .top_turn img,
+  .bottom_turn img {
+    width: 180px;
+  }
+
+  @keyframes scroll_move {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-1485px);
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .turn {
+    gap: 27px;
+  }
+
+  .turn_con {
+    width: 128px;
+  }
+
+  .top_turn img,
+  .bottom_turn img {
+    width: 128px;
+  }
+
+  .top_turn {
+    margin-bottom: 19px;
+  }
+
+  @keyframes scroll_move {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-1055px);
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .section_4 {
+    padding: 0 16px;
+  }
+
+  .turn {
+    gap: 20px;
+  }
+
+  .turn_con {
+    width: 96px;
+  }
+
+  .top_turn img,
+  .bottom_turn img {
+    width: 96px;
+  }
+
+  .top_turn {
+    margin-bottom: 15px;
+  }
+
+  @keyframes scroll_move {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-792px);
+    }
   }
 }
 /* section_4 end */
@@ -644,6 +1220,137 @@ header {
   opacity: 0.5;
   line-height: 30px;
   letter-spacing: -1px;
+}
+
+@media screen and (max-width: 1440px) {
+  .section_5 {
+    padding: 0 0 0 90px;
+  }
+
+  .swiper_5 .swiper-slide {
+    width: 345px;
+  }
+
+  .card_5 {
+    padding: 56px 26px;
+  }
+
+  .card_top {
+    margin-bottom: 75px;
+  }
+
+  .ceo_wrap_5 h2 {
+    font-size: 24px;
+  }
+
+  .ceo_wrap_5 p {
+    font-size: 14px;
+  }
+
+  .card_line {
+    margin-bottom: 23px;
+  }
+
+  .txt_wrap_5 h3 {
+    font-size: 18px;
+    line-height: 26px;
+    margin-bottom: 26px;
+  }
+
+  .txt_wrap_5 p {
+    font-size: 14px;
+    line-height: 23px;
+  }
+}
+
+/* ========================================
+   Section 5 - 1024px 이하
+======================================== */
+@media screen and (max-width: 1024px) {
+  .section_5 {
+    padding: 0 0 0 60px;
+  }
+
+  .swiper_5 .swiper-slide {
+    width: 245px;
+  }
+
+  .card_5 {
+    padding: 40px 20px;
+    border-radius: 15px;
+  }
+
+  .card_top {
+    margin-bottom: 53px;
+  }
+
+  .ceo_wrap_5 h2 {
+    font-size: 20px;
+  }
+
+  .ceo_wrap_5 p {
+    font-size: 12px;
+  }
+
+  .card_line {
+    margin-bottom: 16px;
+  }
+
+  .txt_wrap_5 h3 {
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 19px;
+  }
+
+  .txt_wrap_5 p {
+    font-size: 12px;
+    line-height: 20px;
+  }
+}
+
+/* ========================================
+   Section 5 - 768px 이하
+======================================== */
+@media screen and (max-width: 768px) {
+  .section_5 {
+    padding: 0 16px;
+  }
+
+  .swiper_5 .swiper-slide {
+    width: 100%;
+  }
+
+  .card_5 {
+    padding: 30px 20px;
+    border-radius: 12px;
+  }
+
+  .card_top {
+    margin-bottom: 40px;
+  }
+
+  .ceo_wrap_5 h2 {
+    font-size: 18px;
+  }
+
+  .ceo_wrap_5 p {
+    font-size: 11px;
+  }
+
+  .card_line {
+    margin-bottom: 12px;
+  }
+
+  .txt_wrap_5 h3 {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 15px;
+  }
+
+  .txt_wrap_5 p {
+    font-size: 11px;
+    line-height: 18px;
+  }
 }
 
 /* section_5 end */
